# noir-gobley-kmp

./: .gitignore  README.md  settings.gradle.kts
.fleet/: receipt.json
composeApp/: Cargo.toml  build.gradle.kts
composeApp/src/androidMain/kotlin/dev/gobley/myfirstproject/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/files/: fib.json
composeApp/src/commonMain/kotlin/dev/gobley/myfirstproject/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/rust/: lib.rs
composeApp/src/iosMain/kotlin/dev/gobley/myfirstproject/: MainViewController.kt  Platform.ios.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
